Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136699

Unexpected removal of enabled binding when parent enabled is toggled off

    XMLWordPrintable

Details

    • All
    • 5b17c0363 (dev), c1683afa5 (6.9), 560f63bbe (tqtc/lts-6.8), 833890509 (tqtc/lts-6.5)

    Description

      Qt’s documentation for Item.enabled (https://doc.qt.io/qt-6.8/qml-qtquick-item.html#enabled-prop) states that if a parent’s enabled is set to false, a child’s enabled property “is set to false or true depending on the value it previously had.” In practice, disabling a parent does not change the child’s enabled property or break its binding. Instead, children simply inherit an effective disabled state without modifying their underlying property or binding. The documentation should be corrected to reflect this distinction.

      Actual Behavior:

      • The documentation implies the child’s property is set/reset or that bindings may be lost when a parent is disabled, which does not occur.

       

      Expected Behavior:

      • The documentation should state that disabling a parent does not alter or remove a child’s enabled binding/property, but rather that children compute their effective enabled state by combining their own enabled value with their parent's states

       

       

       

       

      Attachments

        For Gerrit Dashboard: QTBUG-136699
        # Subject Branch Project Status CR V

        Activity

          People

            dheerendra Dheerendra Purohit
            chakib Chakib Boutaghane
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews