Doc: Clarify Item::enabled behavior with respect to child items

The documentation incorrectly stated that setting a parent Item's `enabled`
property to false directly modifies the `enabled` values of its child items.

This is not the case — the effective enabled state of children depends on
their own `enabled` value combined with their parents', and their property
bindings are preserved.

This change updates the documentation to reflect the correct behavior,
avoiding confusion about binding removal or value resetting.

Fixes: QTBUG-136699
Change-Id: I605024ca216f3bb50015f2ac8641f2e28b3973fa
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 5b17c03634dcf8f9da6e6570f579f5c2fa280830)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c1683afa5bfb23a3cd947267514e074e91d75ec0)
(cherry picked from commit 560f63bbe31e483a7476535095d2cfd6500e1bb8)