src/quick/items/qquickitem.cpp
@@ -6425,10 +6425,11 @@ void QQuickItem::setVisible(bool v)
     This property holds whether the item receives mouse and keyboard events.
     By default this is true.
 
-    Setting this property directly affects the \c enabled value of child
-    items. When set to \c false, the \c enabled values of all child items also
-    become \c false. When set to \c true, the \c enabled values of child items
-    are returned to \c true, unless they have explicitly been set to \c false.
+    Setting this property affects the \e effective \c enabled states of child items.
+    When an item's parent is not enabled, the (child) item is effectively disabled and
+    does not receive input events, even if its own \c enabled property is explicitly
+    set to \c true. The child \c enabled property keeps its value, but becomes
+    effective again only if all its ancestor items are enabled.
 
     Setting this property to \c false automatically causes \l activeFocus to be
     set to \c false, and this item will no longer receive keyboard events.
